# pimpl

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  pimpl.cabal
app/: CMakeLists.txt  Demo.hs  cli.cpp  demo.cpp
examples/: CMakeLists.txt  demo.cpp
include/pimpl/: parsing.hpp  sentence.hpp  types.hpp
src/: Pimpl.hs  lib.rs  main.cpp  main.rs  parsing.cpp  parsing.rs  sentence.cpp  types.cpp  types.rs
src/Pimpl/: Sentence.hs  Types.hs
test/: CMakeLists.txt  parsing.cpp  test.cpp
