cabal-version:      3.0
name:               pimpl
version:            0.0.0.0
synopsis:           Poorly implemented propositional logic
license:            MIT
license-file:       LICENSE
author:             Jake Keller
maintainer:         jakeller3630@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Pimpl
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable demo
    main-is:          Demo.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.3.0,
        pimpl
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pimpl-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          PimplTest.hs
    build-depends:    base ^>=4.14.3.0
